[gd_scene load_steps=4 format=3 uid="uid://c70o5xioxk8fh"]

[ext_resource type="Script" path="res://scenes/toolbox/examples/root/2d/animations/text-animations/floating-text/floating-text-using-animation-player.gd" id="1"]
[ext_resource type="FontFile" uid="uid://xxlx2xsv2f0e" path="res://assets/fonts/montreal/Montreal-Bold.ttf" id="2"]

[sub_resource type="FontFile" id="1"]
resource_local_to_scene = true
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="FloatingTextUsingAnimationPlayer" type="Node2D"]
script = ExtResource("1")

[node name="AboutNode2D" type="Node2D" parent="."]
position = Vector2(18, 16)

[node name="VBoxContainer" type="VBoxContainer" parent="AboutNode2D"]
offset_right = 40.0
offset_bottom = 40.0

[node name="CreatedByLabel" type="Label" parent="AboutNode2D/VBoxContainer"]
layout_mode = 2
text = "Example Created By: GrayDwarf"

[node name="ShaderControls" type="Node2D" parent="."]
position = Vector2(331, 89)

[node name="VBoxContainer" type="VBoxContainer" parent="ShaderControls"]
custom_minimum_size = Vector2(400, 200)
offset_top = 1.0
offset_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="TextControls" type="Control" parent="ShaderControls/VBoxContainer"]
custom_minimum_size = Vector2(300, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShaderControls/VBoxContainer/TextControls"]
layout_mode = 0
offset_right = 219.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="TextLabel" type="Label" parent="ShaderControls/VBoxContainer/TextControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Text:"

[node name="TextLineEdit" type="LineEdit" parent="ShaderControls/VBoxContainer/TextControls/HBoxContainer"]
custom_minimum_size = Vector2(210, 32)
layout_mode = 2
text = "99999"
max_length = 100
caret_blink = true

[node name="FontColorControls" type="Control" parent="ShaderControls/VBoxContainer"]
custom_minimum_size = Vector2(300, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShaderControls/VBoxContainer/FontColorControls"]
layout_mode = 0
offset_right = 219.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="FontColorLabel" type="Label" parent="ShaderControls/VBoxContainer/FontColorControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Font Color:"

[node name="FontColorButton" type="Button" parent="ShaderControls/VBoxContainer/FontColorControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Color Picker"

[node name="FontColorLineEdit" type="LineEdit" parent="ShaderControls/VBoxContainer/FontColorControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
text = "0.0"
max_length = 5
editable = false
caret_blink = true

[node name="FontOutlineColorControls" type="Control" parent="ShaderControls/VBoxContainer"]
custom_minimum_size = Vector2(300, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShaderControls/VBoxContainer/FontOutlineColorControls"]
layout_mode = 0
offset_right = 219.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="FontOutlineColorLabel" type="Label" parent="ShaderControls/VBoxContainer/FontOutlineColorControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Outline Color:"

[node name="FontOutlineColorButton" type="Button" parent="ShaderControls/VBoxContainer/FontOutlineColorControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Color Picker"

[node name="FontOutlineColorLineEdit" type="LineEdit" parent="ShaderControls/VBoxContainer/FontOutlineColorControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
text = "0.0"
max_length = 5
editable = false
caret_blink = true

[node name="FontSizeControls" type="Control" parent="ShaderControls/VBoxContainer"]
custom_minimum_size = Vector2(400, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShaderControls/VBoxContainer/FontSizeControls"]
custom_minimum_size = Vector2(400, 32)
layout_mode = 0
offset_right = 219.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="FontSizeLabel" type="Label" parent="ShaderControls/VBoxContainer/FontSizeControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Font Size:"

[node name="FontSizeSlider" type="HSlider" parent="ShaderControls/VBoxContainer/FontSizeControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
min_value = 1.0
max_value = 128.0
value = 24.0
allow_greater = true
allow_lesser = true
ticks_on_borders = true

[node name="FontSizeLineEdit" type="LineEdit" parent="ShaderControls/VBoxContainer/FontSizeControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
text = "24"
max_length = 4
editable = false
caret_blink = true

[node name="FontOutlineSizeControls" type="Control" parent="ShaderControls/VBoxContainer"]
custom_minimum_size = Vector2(400, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShaderControls/VBoxContainer/FontOutlineSizeControls"]
custom_minimum_size = Vector2(400, 32)
layout_mode = 0
offset_right = 219.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="FontSizeLabel" type="Label" parent="ShaderControls/VBoxContainer/FontOutlineSizeControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Outline Size:"

[node name="FontOutlineSizeSlider" type="HSlider" parent="ShaderControls/VBoxContainer/FontOutlineSizeControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
max_value = 10.0
value = 1.0
allow_greater = true
allow_lesser = true
ticks_on_borders = true

[node name="FontOutlineSizeLineEdit" type="LineEdit" parent="ShaderControls/VBoxContainer/FontOutlineSizeControls/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
text = "1"
max_length = 4
editable = false
caret_blink = true

[node name="ColorPickerContainer" type="Node2D" parent="."]
visible = false

[node name="CloseButton" type="Button" parent="ColorPickerContainer"]
offset_left = 635.0
offset_top = 17.0
offset_right = 664.0
offset_bottom = 54.0
theme_override_fonts/font = SubResource("1")
text = "X"
flat = true

[node name="ColorPicker" type="ColorPicker" parent="ColorPickerContainer"]
offset_left = 413.0
offset_top = 95.0
offset_right = 705.0
offset_bottom = 557.0

[node name="TimerContainer" type="Node2D" parent="."]

[node name="AnimateTextTimer" type="Timer" parent="TimerContainer"]
wait_time = 1.5
autostart = true

[node name="FloatingTextContainer" type="Node2D" parent="."]
position = Vector2(62.5, 183)

[connection signal="pressed" from="ShaderControls/VBoxContainer/FontColorControls/HBoxContainer/FontColorButton" to="." method="_on_FontColorButton_pressed"]
[connection signal="pressed" from="ShaderControls/VBoxContainer/FontOutlineColorControls/HBoxContainer/FontOutlineColorButton" to="." method="_on_FontOutlineColorButton_pressed"]
[connection signal="value_changed" from="ShaderControls/VBoxContainer/FontSizeControls/HBoxContainer/FontSizeSlider" to="." method="_on_FontSizeSlider_value_changed"]
[connection signal="value_changed" from="ShaderControls/VBoxContainer/FontOutlineSizeControls/HBoxContainer/FontOutlineSizeSlider" to="." method="_on_FontOutlineSizeSlider_value_changed"]
[connection signal="pressed" from="ColorPickerContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="color_changed" from="ColorPickerContainer/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="timeout" from="TimerContainer/AnimateTextTimer" to="." method="_on_AnimateTextTimer_timeout"]
